--- a/public/index.html
+++ b/public/index.html
@@ -312,10 +312,10 @@
       ease:Power2.easeInOut,
       yoyo:false
       }, 0.1)
-
       createJets();
     </script>
     <div id="root"></div>
+    <div id="container"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
